构建配置调整

--- a/build.gradle
+++ b/build.gradle
@@ -14,4 +14,7 @@ allprojects {
         jcenter()
         mavenCentral()
     }
+    tasks.withType(JavaCompile) {
+        options.encoding = 'UTF-8'
+    }
 }
