--- a/build.gradle
+++ b/build.gradle
@@ -17,4 +17,7 @@ allprojects {
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
     }
+    tasks.withType(Javadoc) {
+        options.encoding = 'UTF-8'
+    }
 }
